fix: :bug: add css rule to hide disclosure widget on safari

--- a/app/static/swagger-ui.css
+++ b/app/static/swagger-ui.css
@@ -130,6 +130,10 @@ body {
   display: block;
 }
 
+.swagger-ui details summary::-webkit-details-marker {
+  display:none;
+}
+
 .swagger-ui summary {
   cursor: pointer;
   color: var(--details-header-text-color);
